apps/server/k8s/tilt/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-tester
  namespace: default
spec:
  containers:
    - name: busybox
      image: busybox
      command: [ "sleep", "3600" ]
      volumeMounts:
        - name: shared-volume
          mountPath: /data
  volumes:
    - name: shared-volume
      persistentVolumeClaim:
        claimName: test-result-shared-pvc
