apps/server/k8s/tilt/ingress-server.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: server.local           # nombre que vas a usar en el navegador
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server       # debe coincidir con tu Service
                port:
                  number: 3000
